# unibook

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
assets/: code-copy.css  code-copy.js  page-controls-start.html  prism-retry.js  search.css  search.html  search.js  theme-switcher.css  theme-switcher.html  theme-switcher.js  themes.css  toc-toggle.css  toc-toggle.html  toc-toggle.js
src/: book.rs  builder.rs  config.rs  main.rs  search.rs  search_assets.rs  toc.rs  unidoc.rs
test-demo/: book.toml
test-demo/docs/: chapter1.html  index.html  intro.html  math-test.html  search-index.json
test-demo/src/: chapter1.md  intro.md  math-test.md
