[package]
name = "unibook"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
# For serve command
tiny_http = "0.12"
# For watch command
notify = "6.1"
# For search index
serde_json = "1.0"
